--- a/About-myself/index.html
+++ b/About-myself/index.html
@@ -13,10 +13,11 @@
   <li>html,hypertext,makeup language.</li>
   <li>css,cascading style sheet.</li>
   <li>js,javascript.</li>
-  <li>figman desing.</li>
+  <li>figman design</li>
   <li>system testing.</li>
   <p><h1 class="happy">i would like to develop a system that helps clients to service providers when it comes to events planning.</h1></p>
   <button class="story">more about me</button>
-  <frame width="560" height="315" src="https://www.youtube.com/embed/qNu1lnn35q4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-allowfullscreen></ifpicture" rame>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vu9VRF1VkFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
